--- a/week1/index.html
+++ b/week1/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+<script src="script.js"></script>
+  <script>
+    document.write(firstName)
+    document.write(lastName)
+    document.write(yearsOfStudy)
+    document.write(goal)
+  </script>  
 </body>
 </html>
