--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,12 @@
 <body>
 
 <script src="script.js"></script>
-  
+
+<script>
+  document.write (firstName)
+  document.write (lastName)
+  document.write (yearsOfStudy)
+  document.write (goal)
+</script>
 </body>
 </html>
