--- a/week2/index.html
+++ b/week2/index.html
@@ -13,8 +13,8 @@
 
     function translatePigLatin(str) {
 //  Create variables to be used
- var pigLatin = "";
- var vowel = /[aeiou]/ ;
+ let pigLatin = "";
+ let vowel = /[aeiou]/ ;
 
 
  // Check if the first character is a vowel
@@ -25,7 +25,7 @@
   pigLatin = str + "ay";
   } else {
   // Find two consonants before the first vowel.
-  var vowelIndice = str.indexOf(str.match(vowel)[0]);
+  let vowelIndice = str.indexOf(str.match(vowel)[0]);
 
   // Take the string from the first vowel to the last char
   // then add the consonants that were previously omitted and add the ending.
