--- a/week6/index.html
+++ b/week6/index.html
@@ -51,32 +51,25 @@ YOUR CODE GOES HERE: complete the following items to make the tests pass. For ta
 */
 
 //1. Find all span tags on the page, and store the result in the variable below
-let spans = document.getElementsByTagName('span');
+let spans = $("span");
 //2. Find all tags with a class of "severe" and store the result
-let severe = document.getElementsByClassName('severe');
+let severe = $(".severe");
 //3. Find the element with an id of "warnings"
-let warnings = document.getElementById('warnings')
+let warnings = $("#warnings");
 //4. Find the <li> tags located inside of the element with ID of "warnings"
- let warningItems = document.getElementById("warnings").getElementsByTagName("li");
-
+let warningItems = $("#warnings li");
 //5. Find the <ul> tag that contains an element with a class of "mild"
-let ul = document.getElementsByTagName('ul');
+let ul = $("ul");
 //6. Find all spans with a "data-x" attribute
-let dataX = document.querySelectorAll('span[data-x]');
+var dataX = $("span,dataX");
 //7. Change the elements with a class of "purple" to have a background of "magenta"
-let classElement = document.querySelector('.purple');
-classElement.style.backgroundColor = 'magenta';
-
+$(".purple").css("background-color", "magenta");
 //8. Change the contents of the element with class "continent" to contain "Australia"
-document.querySelector(".continent").textContent = "Australia";
-
+$(".continent").text("Australia");
 //9. Add a class of "stripe" to all odd-numbered list items inside section tags
-$("section li:odd").addClass("stripe");
-
+$("section li:odd").addClass("stripe")
 //10. Remove the class of "facts" from the <main> element
-    let mainElement = document.querySelector("main");
-mainElement.classList.remove("facts");
-
+$("main").removeClass("facts");
 
 </script>
 
