--- a/week5/index.html
+++ b/week5/index.html
@@ -16,9 +16,10 @@
   <div id="card_hand"></div>
 
   <script>
-    const suits = ["Hearts"  , "Spades", "Clubs", "Diamonds", 2, 3, 4, 5, 6, 7, 8, 9, 10 ];
-    const values = ["Ace", "Jack", "Queen", "King" ];
-
+    
+    const suits = ["Hearts", "Spades", "Clubs", "Diamonds"];
+    const values = ["Ace", "2", "3", "4", "5", "6", "7", "8", "9", "10", "Jack", "Queen", "King"];
+ 
     function Card(value, suit) {
       this.value = value;
       this.suit = suit;
