--- a/week8/index.html
+++ b/week8/index.html
@@ -73,7 +73,7 @@
 
     <script>
         // change to your API
-        let API_KEY = "ceb57b465a84a4e30720c08a28401e6b";
+        let API_KEY = "d09708f81ff13711278d283901a9ce34";
 
         // daily forecast API - https://openweathermap.org/forecast16
         // geocoding API - https://openweathermap.org/api/geocoding-api
@@ -106,19 +106,21 @@
 
                 let lat = geo_data[0].lat;
                 let lon = geo_data[0].lon;
-
+                let data = '2025-03-19';
                 //Daily forcast API
-                let forecast_url = `https://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`;
-
+               
+                //let forecast_url = `https://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`;
+                let forecast_url = `https://api.openweathermap.org/data/2.5/forecast/daily?lat=${lat}&lon=${lon}&appid=${API_KEY}`; 
                 const forecast_response = await fetch(forecast_url);
                 const forecast_data = await forecast_response.json();
 
                 //Display the forcast with icon url
                 let html = "<ul>";
                 forecast_data.list.forEach(forecast => {
+                
                     let forecast_date = new Date(forecast.dt * 1000);
                     let icon_url = `http://openweathermap.org/img/w/${forecast.weather[0].icon}.png`
-                     html += `<li>Date: ${forecast_date} Temp: ${kelvinToF(forecast.main.temp)} <img src="${icon_url}"></li>`
+                     html += `<li>Date: ${forecast_date} Temp: ${kelvinToF(forecast.temp)} <img src="${icon_url}"></li>`
                 });
                 html += "</ul>"; 
                 $("#forecast").html(html);
